# Black_Network

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: gschemas.compiled  org.netsentinel.NetSentinel.gschema.xml  pqc_nist_reference.json  vuln_database.json
docs/: rules-of-engagement-template.md
docs/cahier-des-charges/: NetSentinel_Cahier_des_Charges_v2.md
docs/threat-model/: STRIDE-active_enumeration.md  STRIDE-fingerprint.md  STRIDE-history.md  STRIDE-network_map.md  STRIDE-reports.md  STRIDE-settings.md  STRIDE-traffic_capture.md  STRIDE-web_interceptor.md
packaging/deb-helper/debian/: org.netsentinel.Helper1.conf  org.netsentinel.helper.policy
scripts/: check_versions.sh  setup_dev_env.sh
src/netsentinel/: __init__.py
src/netsentinel/core/: __init__.py
src/netsentinel/core/db/: models.py
src/netsentinel/helperd/: dbus_service.py
src/netsentinel/ui/: main.py
src/netsentinel/utils/: __init__.py  network_validation.py  subprocess_safe.py
tests/unit/core/: test_exporter.py  test_keyring.py  test_ledger.py  test_models.py  test_pqc_validator.py  test_ram_store.py  test_report_generator.py  test_vuln_scanner.py
tests/unit/helperd/: test_arp_spoofer.py  test_dbus_advanced.py  test_dbus_audit.py  test_dbus_capture.py  test_dbus_proxy.py  test_dbus_report.py  test_dbus_service.py  test_dumpcap_wrapper.py  test_mitm_handler.py  test_nmap_advanced.py  test_pcap_parser.py  test_wrappers.py
tests/unit/ui/: test_app_integration.py  test_settings.py
tests/unit/utils/: test_network_validation.py  test_subprocess.py
(+26 files in other folders)
