[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netsentinel"
version = "0.1.0"
description = "NetSentinel native GNOME/GTK4 cybersecurity scanning and auditing tool."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Developer" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
dependencies = [
    "dbus-next>=0.2.3",
    "pydantic>=2.7.0",
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
    "google-genai>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.8",
    "PyGObject>=3.48.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/netsentinel"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "PTH"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
